implemented stop propagation when clicking contact link

--- a/css/index.css
+++ b/css/index.css
@@ -350,3 +350,27 @@ img {
   background: #FFFFFF;
   color: #17A2B8;
 }
+.home .destination .btn {
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 45px;
+  background-color: #17A2B8;
+  color: #FFFFFF;
+  border: 1px solid #C0C0C0;
+  cursor: pointer;
+  font-size: 1.8rem;
+}
+@media (max-width: 500px) {
+  .home .destination .btn {
+    width: 100%;
+  }
+}
+.home .destination .btn:hover {
+  background: #FFFFFF;
+  color: #17A2B8;
+}
