--- a/less/home-page.less
+++ b/less/home-page.less
@@ -111,4 +111,12 @@
       }
     }
   }
+
+  // ADDED BY LIL
+
+  .destination {
+    .btn {
+      .button-creator(200px, 45px, @button-bg, @white, 1.8rem);     
+    }
+  }
 }// home
